2010-01-16 [holger]	3.7.4cvs3

	* src/prefs_toolbar.h
		Forgotten header

2010-01-15 [colin]	3.7.4cvs2

	* src/privacy.c
		Decode mimeinfo before decrypting it. Probably
		fixes bug 2059 'gpgme >=1.1.8 not compatible 
		with S/MIME encryption' and bug 2076 'having 
		worked 2 times properly CLAWS ceased to 
		decrypt incoming PGP mails -displays base64 
		instead - sucks completely'
		Let's hope complete suckage ends here!
		Thanks to Matthias Drochner.

2010-01-08 [paul]	3.7.4cvs1

	* tools/claws.i18n.status.pl
		fix typos

2010-01-08 [paul]	3.7.4

	* NEWS
	* README
	* RELEASE_NOTES	
		3.7.4 released!

2010-01-08 [paul]	3.7.3cvs57

	* po/ca.po
	* po/cs.po
	* po/de.po
	* po/fi.po
	* po/hu.po
	* po/id.po
	* po/ja.po
	* po/nl.po
	* po/pt_BR.po
	* po/pt_PT.po
	* po/ru.po
	* po/sk.po
		updated translations by Miquel Oliete, David Vachulka, Stephan Sachse,
		Tommi Pirinen, Pader Rezso, MSulchan Darmawan, kazken3, Marcel Pol,
		Frederico Goncalves Guimaraes, Tiago Faria, Aleksei Miheev, and
		Slavko

2010-01-08 [paul]	3.7.3cvs56

	* src/common/utils.c
		fix bug 2089, 'URLs ending with an underscore ('_')
		are not correctly parsed'. thanks to Johan

2010-01-05 [colin]	3.7.3cvs55

	* po/fr.po
		Update french translation

2010-01-04 [mones]	3.7.3cvs54

	* po/es.po
		Update Spanish translation

2010-01-04 [mones]	3.7.3cvs53

	* manual/plugins.xml
		Some format
	* manual/es/claws-mail-manual.xml
	* manual/es/intro.xml
	* manual/es/plugins.xml
		Synchronise with English version

2010-01-03 [paul]	3.7.3cvs52

	* ChangeLog
		fix format
	* src/gtk/authors.h
		update TEAM_LIST, fix encoding

2010-01-03 [mir]	3.7.3cvs51

	* src/compose.c
		When composing to a NNTP list TO: will always be preset
		to the NNTP list unless user has chosen some other default
		in which case we will handle this the normal way. Therefore
		mfield will be set to TO_FIELD_PRESENT if mailto is NULL.

2010-01-01 [paul]	3.7.3cvs50

	* src/gtk/about.c
		bump copyright year whilst it's in mind
