@@ -860,15 +860,17 @@ check_again:
 	if (!err)
 		err = gpgme_op_keylist_next(ctx, &key);
 	gpgme_op_keylist_end(ctx);
-	gpgme_release(ctx);
 	if (gpg_err_code(err) == GPG_ERR_EOF) {
 		if (gpgme_get_protocol(ctx) != GPGME_PROTOCOL_CMS) {
 			gpgme_set_protocol(ctx, GPGME_PROTOCOL_CMS);
 			goto check_again;
 		}
+		gpgme_release(ctx);
 		return FALSE;
-	} else
+	} else {
+		gpgme_release(ctx);
 		return TRUE;
+	}
 }
 
 void sgpgme_check_create_key(void)
